--- a/styles.css
+++ b/styles.css
@@ -158,3 +158,20 @@ button {
     background-color: lightgray;
     padding: 20px;
 }
+
+@media (max-width: 400px){
+    .navbar {
+        padding: 15px;
+    }
+    
+    .navbar a {
+        padding: 2px 10px;
+    }
+
+    
+    section {
+        padding: 5px;
+        margin: 10px;
+    }
+    
+}
